# depth-to-normal-translator

./: .gitignore  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt  test_speed.py
d2nt/: __init__.py  core.py  filters.py  utils.py
demo_data/: params.txt
python/: demo.py
